[package]
name    = "berthad"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck   = { version = "1.21" }
hex        = { version = "0.4" }
sha256     = { version = "1.5" }
tokio      = { version = "1.43", features = ["full"] }
uuid       = { version = "1.12", features = ["v4"] }

[dev-dependencies]
tempdir = { version = "0.3" }
